# constitute

./: .gitignore  Cargo.toml  README.md  grammar.gbnf  reset.sh  server.py  setup.sh
prompts/: main.txt
src/: agent.rs  main.rs
src/agent/: memory.rs
