[package]
name = "galatea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
# llama_cpp_rs = "0.3.0"
# llm = "0.1.1"
# rand = "0.8.5"
strfmt = "0.2.4"
reqwest = { version = "0.11", features = ["json"] }